--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ p {
     Class Selectors
 ------------------- */
 .bg { 
-    background-image: url("http://military.jobs-ups.com/bundles/vcg/images/slider/esgr.jpg");
+    background-image: url("Veterans-Remembered/veterans.jpg");
     background-size: cover;
     background-position: center center;
     position: relative;
