--- a/style.css
+++ b/style.css
@@ -1,71 +1,96 @@
-/* -------------------
-    Element Selectors
-------------------- */
-h1 {
-    font-family: Helvetica, Arial, sans-serif;
-    font-size: 56px;
-    text-transform: uppercase;
-}
+/* Custom Styles */
 
-body, 
-html {
+/* -----------------------
+    Element Selectors 
+------------------------*/
+html,
+body,
+header,
+#intro {
     height: 100%;
 }
 
-hr {
-   border: 1px solid #fff; 
-   max-width: 70%;
+/* -----------------------
+    ID Selectors 
+------------------------*/
+#homehr {
+    width: 40%;
 }
 
-p {
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 18px;
+#standardhr{
+    width: 30%;
+    border-top: 1px solid #032A66;
 }
 
-/* -------------------
-    ID Selectors
-------------------- */
-
-#img-overlay {
-    position: absolute;
-    background: linear-gradient(rgba(189, 17, 52, 0.7),rgba(3, 42, 102, 0.7));
-    top: 0;
-    bottom: 0;
-    height: 100%;
-    width: 100%;
-    z-index: 5;
+#icon {
+    color: #032A66;
 }
 
-
-/* -------------------
-    Class Selectors
-------------------- */
-.bg { 
-    background-image: url("veterans.jpg");
-    background-size: cover;
-    background-position: center center;
-    position: relative;
-    top: 0;
-    bottom: 0;
-    height: 100vh;
-    z-index: 1;
+#icon:hover {
+    color: #06347D;
 }
 
-.vertical-align {
-    position: relative;
-    top: 50%;
-    transform: translateY(-50%);
+/* -----------------------
+    Class Selectors 
+------------------------*/
+
+.full-bg-img {
+    background: url("/Users/Stephen/Desktop/Veterans Remembered/img/home-bg-img.png")no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size:cover; 
 }
 
-.motto {
-    font-style: italic;
-    font-size: 20px;
+.navbar {
+    background-color:#032A66;
 }
 
-.icons {
-    fill: rgba(225, 225, 225, 1);
+.navbar a{
+    color: white;
 }
 
-.icons:hover {
-    fill: rgba(225, 225, 225, 0.7);
+.navbar a:hover{
+    background-color: #06347D;
+}
+
+.steps {
+    background: #032A66;
+    padding: 10px;
+}
+
+.steps-red {
+    background: #BD1134;
+    padding: 10px;
+}
+
+.instructions {
+    background: #06347D;
+    padding: 15px;
+}
+
+.instructions-red {
+    background: #D83353;
+    padding: 15px;
+}
+
+.btn{
+    background-color: #032A66;
+}
+
+.btn:hover {
+    background-color: #06347D;
+}
+
+/* -----------------------
+    Media Queries
+------------------------*/
+@media (max-width: 992px) {
+   #steps {
+       margin: 10px;
+   }
+   #about {
+       margin-top: 15px;
+       margin-bottom: 40px;
+   }
 }
