--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ header,
 ------------------------*/
 
 .full-bg-img {
-    background: url("Veterans-Remembered/home-bg-img.png")no-repeat center center fixed;
+    background: url("home-bg-img.png")no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
